dr-test.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: ratings-copy
  namespace: bookinfo
spec:
  host: ratings
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
